# Projet_web_scraping_clonage

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  cli_entry.py  main.py  pyproject.toml  render.yaml  requirements.txt
.github/workflows/: ci.yml
core/: __init__.py  animations.py  browser.py  crawler.py  downloader.py  fonts.py  interactions.py  interceptor.py  rewriter.py  screenshot.py  storage.py  utils.py
tests/: __init__.py  test_rewriter.py  test_utils.py
utils/: cli.py  groq.py
webui/: server.py
webui/static/: script.js  style.css
webui/templates/: index.html
