[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "web-cloner"
version = "1.0.0"
description = "Clonez n'importe quel site web en local avec tous ses assets"
readme = "README.md"
license = {file = "LICENSE"}
keywords = ["web", "cloner", "scraper", "playwright", "nuxt", "fastapi"]
authors = [
    {name = "Web Cloner Team"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.8"
dependencies = [
    "playwright>=1.40",
    "playwright-stealth>=1.0",
    "beautifulsoup4>=4.12",
    "lxml>=5.0",
    "aiohttp>=3.9.0",
    "rich>=13.0",
    "python-dotenv>=1.0",
    "groq>=0.5",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "jinja2>=3.1",
    "websockets>=12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.0",
]

[project.urls]
Homepage = "https://github.com/anomalyco/web_cloner"
Repository = "https://github.com/anomalyco/web_cloner.git"
Issues = "https://github.com/anomalyco/web_cloner/issues"

[project.scripts]
web-cloner = "cli_entry:cli_main"

[tool.setuptools.packages.find]
include = ["core*", "webui*", "utils*"]
